; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_unprep_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_unprep_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request = type { i32, %struct.request_queue* }
%struct.request_queue = type { i32 (%struct.request_queue*, %struct.request.0*)* }
%struct.request.0 = type opaque

@REQ_DONTPREP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @blk_unprep_request(%struct.request* %0) #0 {
  %2 = alloca %struct.request*, align 8
  %3 = alloca %struct.request_queue*, align 8
  store %struct.request* %0, %struct.request** %2, align 8
  %4 = load %struct.request*, %struct.request** %2, align 8
  %5 = getelementptr inbounds %struct.request, %struct.request* %4, i32 0, i32 1
  %6 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  store %struct.request_queue* %6, %struct.request_queue** %3, align 8
  %7 = load i32, i32* @REQ_DONTPREP, align 4
  %8 = xor i32 %7, -1
  %9 = load %struct.request*, %struct.request** %2, align 8
  %10 = getelementptr inbounds %struct.request, %struct.request* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = and i32 %11, %8
  store i32 %12, i32* %10, align 8
  %13 = load %struct.request_queue*, %struct.request_queue** %3, align 8
  %14 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %13, i32 0, i32 0
  %15 = load i32 (%struct.request_queue*, %struct.request.0*)*, i32 (%struct.request_queue*, %struct.request.0*)** %14, align 8
  %16 = icmp ne i32 (%struct.request_queue*, %struct.request.0*)* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %1
  %18 = load %struct.request_queue*, %struct.request_queue** %3, align 8
  %19 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %18, i32 0, i32 0
  %20 = load i32 (%struct.request_queue*, %struct.request.0*)*, i32 (%struct.request_queue*, %struct.request.0*)** %19, align 8
  %21 = load %struct.request_queue*, %struct.request_queue** %3, align 8
  %22 = load %struct.request*, %struct.request** %2, align 8
  %23 = bitcast %struct.request* %22 to %struct.request.0*
  %24 = call i32 %20(%struct.request_queue* %21, %struct.request.0* %23)
  br label %25

25:                                               ; preds = %17, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
